# hybridPNM_repo

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Props.cpp  Props.h  README.md  Variables.cpp  Variables.h  eigenSetGet.h  wrapper.cpp
cases/fig11/: compressibility.py  get_permeability.py
cases/fig12_13/: .gitignore  adsorption.py  data_dns.csv  get_diffusion.py
cases/fig14_15/: data_dns.csv  get_adsorption.py  two_phase_sorp.py
cases/fig17b_18/: .gitignore  compare_data.py  get_dns_data.py  pnm_real.py
cases/fig2b/: capillaryRise.py
cases/fig3b/: capillaryRise.py
cases/fig4/: .gitignore  capillary_dr.py  capillary_pnm_dr.csv  capillary_vof_dr.csv
cases/fig5/: .gitignore  capillary_imb.py  capillary_pnm_imb.csv  capillary_vof_imb.csv
cases/fig6/: BL_validation.py
cases/fig7/: demo_sorption.py  plot_pars.py
cases/fig8/: demo_sorption.py
con/: Con.cpp  Con.h  ConP.cpp  ConP.h  ConS.cpp  ConS.h
demo/: demo.cpp  demo.py
equation/: Equation.cpp  Equation.h
latex/: models.tex
loc/: Loc.cpp  Loc.h  LocP.cpp  LocP.h  LocS.cpp  LocS.h
